# PETS-G

./: .gitignore  .prettierignore  Makefile  README.md  grcc.mk  just-start-the-damn-game.md  project.godot
.github/: dependabot.yml
__piskels/: BattleIcons.piskel  Terra.piskel  Yusamira.piskel
__tilesetter/: __world.tset  grass.tset  world.tset
_piskels/: AkaMantoTPR.piskel  Animals.piskel  BattlePortraits.piskel  Cassander.piskel  Enemies2.piskel  Ethan.piskel  EthanMom2.piskel  Leo.piskel  World.piskel  World2.piskel  world.tset
_piskels/Char/: Leo.piskel  (+9 more)
docs/: readme-header.pdn
music/: logo.wav.import
pets-gd/: .gitignore  PETS.gdextension  PETS.gdextension.uid  default_bus_layout.tres  icon.png.import  pets-lib.gdextension  project.godot
pets-lib/: Cargo.toml  battle  battle_strategies  build.rs  charmap.json  charmap.toml  classes  dialogue  quests  registries  run  rustfmt.toml  tactics  translations.csv
pets-lib/const/: enemies.csv
pets-lib/dg/: .gitignore  main.dg
pets-lib/dg/src/: check.dg  debug-battle.dg  debug-menu.dg  intro.dg  intro1.dg  main.dg  rodrick.dg
pets-lib/sop/: enemies.md  index.md  plot.md  workflow.md
pets-lib/src/: battle_engine.rs  choicelist.rs  consts.rs  dialogue.rs  functions.rs  interner.rs  lib.rs  limiq.rs  listvec.rs  macros.rs  main.rs  main_menu.rs  main_scene.rs  player.rs  registry.rs  singleton.rs  stats.rs  title_screen.rs  util.rs  wrapped.rs
pets-lib/src/battle/: affinities.rs  autoload.rs  midi.rs  midireader.rs  mod.rs  notes.rs  player.rs  rhythm.rs  skills.rs  stat_translation.rs
pets-lib/src/battle/midi/: accurate_timer.rs  mod.rs
pets-lib/src/battle/skills/: attack.rs  buffs.rs  mod.rs  other.rs  recovery.rs  registry.rs  shields.rs  status_effects.rs
pets-lib/src/dialogue/: autoload.rs  dbox.rs  dnode.rs  mod.rs  placeholders.rs  registry.rs  script.rs
pets-lib/src/dialogue/dbox/: choice.rs  dchoice.rs  mod.rs  placeholders.rs
pets-lib/src/items/: inv.rs  mod.rs
pets-lib/src/llm/: .gitignore  mod.rs
pets-lib/src/llm/prompts/: _devon_origins.txt  devon_shop.txt  shopkeeper_joke.txt
pets-lib/src/main_menu/: mod.rs
pets-lib/src/stats/: autoload.rs  battler.rs  charmap.rs  enemy.rs  mod.rs  pchars.rs  quests.rs  savefiles.rs  statcalc.rs  state.rs  stats_interface.rs
pets-lib/src/stats/scrapbook/: mod.rs
pets-lib/src/util/: choices.rs  choose.rs  describe.rs  extensions.rs  limiq.rs  mod.rs  node_stuff.rs  registry.rs  singleton.rs  unwrap.rs  wrapped.rs
pets-lib/src/world/: enemy_node.rs  interaction.rs  inv_node.rs  menu.rs  mod.rs  music_zone.rs  partycb.rs  pchar_node.rs  playercb.rs  water_zone.rs
pets-lib/src/world/interaction/: manager.rs  mod.rs  zone.rs
singletons/: Dialogs.gd  Globals.gd  Music.tscn
sounds/: item_collected.wav.import
(+937 files in other folders)
