[package]
name = "pets_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
concat-idents = "1.1.5"
derive_more = "0.99.17"
derived-deref = "2.1.0"
dialogical = "*"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"]}
indoc = "2.0.4"
libdx = "2.1.1"
# llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
num_enum = "0.7.1"
rand = "0.8.5"
ribbons = "0.1.0"
serde = {version = "1.0.188", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
typetag = "0.2.15"

[build-dependencies]
dialogical = "*"

