[package]
name = "pets_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
jsonnet-rs = "0.17.0"
glob = "0.3.0"
walkdir = "2.5.0"

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.38", features = ["serde"] }
concat-idents = "1.1.5"
derive_more = { version = "2.0.1", features = ["sum"] }
derived-deref = "2.1.0"
# godot = { version = "0.2.2", features = ["api-4-3", "experimental-threads", "experimental-godot-api"] }
godot = { git = "https://github.com/godot-rust/gdext", rev = "9ae2d36", features = ["api-4-3", "experimental-threads", "experimental-godot-api"] }
# godot = { git = "https://github.com/godot-rust/gdext", features = ["api-4-3", "experimental-threads", "experimental-godot-api"] }
indoc = "2.0.4"
libdx = "2.1.1"
nodi = "1.0.3"
rand = "0.9.0"
ribbons = "0.1.0"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.117"
strum = { version = "0.27.1", features = ["derive"] }
toml = "0.8.15"
typetag = "0.2.15"

